--- a/main.css
+++ b/main.css
@@ -1,1 +1,64 @@
-. 
+*{
+    padding: 0%;
+    margin:0%;
+}
+
+.mainheader{
+    width: 100%;
+    height: 70px;
+    background-color: #7952b3;;
+}
+
+.headerbody {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logoside {
+    display: flex;
+    align-items: center;
+    
+}
+
+.logoside img{
+    height: 50px;
+    padding-left: 20px;
+    padding-right: 15px;
+    padding-top: 10px;
+   
+}
+
+.nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.nav a{
+    text-decoration: none;
+    text-align: center;
+}
+
+.nav li{
+    padding: 15px;
+    list-style-type: none;
+    font-weight: bold;
+    color: white;
+    font-size: 17px;
+}
+
+.iconsection img {
+    padding: 0 10px 0 0px;
+    
+}
+
+.iconsection input{
+    padding: 15px;
+    margin-right: 30px;
+    background-color: transparent;
+    color: yellow;
+    font-size: 17px;
+    font-weight: bold;
+    border: 1px solid yellow;
+
+}
