modified the view point, include version

--- a/main.css
+++ b/main.css
@@ -115,5 +115,18 @@ body{
     padding-right: 50px;
 }
 
+.version{
+    display: flex;
+    padding: 20px 0 0 0;
+}
+.version a{
+    padding-left: 20px;
+}
+
+.jobs-image img{
+    padding-top: 20px;
+}
+
+
 
 
