--- a/main.css
+++ b/main.css
@@ -175,6 +175,8 @@ body{
  font-size: 20px;
  font-weight: lighter;
  padding-left: 20px;
+ overflow: visible ;
+ text-overflow:"....";
 }
 
 .code1 button{
