--- a/main.css
+++ b/main.css
@@ -196,3 +196,31 @@ body{
  margin: 50px 0 0 100px;
 }
 
+.footer{
+    width: 100%;
+    height: 180px;
+    background-color: #beaadd;
+}
+
+.footerbody{
+    width: 60%;
+    font-size: 20px;
+    margin-left: 30px;
+}
+
+.footermain1 {
+    display: flex;
+    
+}
+
+.footermain1 a{
+    padding-left: 20px;
+    margin-top: 40px;
+}
+
+.footermain2 p{
+    padding-left: 20px;
+    margin-top: 20px;
+    color: white;
+}
+
