--- a/main.css
+++ b/main.css
@@ -226,3 +226,33 @@ body{
     margin:120px 0 0 100px;
 }
 
+
+.code1{
+    background-color: #e9e7ec;
+    height: 60px;
+    
+ }
+.code1 h6{
+ font-size: 20px;
+ font-weight: lighter;
+ padding-left: 20px;
+ overflow: visible ;
+
+ text-overflow:"....";
+}
+
+.code1 button{
+    background-color: transparent;
+    border: 1px solid #0dcaf0;
+    font-size: 14px;
+    color: #0dcaf0;
+    padding: 5px;
+    margin-left: 400px;
+}
+
+.code11 img{
+    margin-right: 20px;
+}
+.addedlogo img{
+ margin: 50px 0 0 100px;
+}
